--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,16 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-jdbc')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
+
     compile('org.mybatis:mybatis:3.3.1')
     compile('org.mybatis:mybatis-spring:1.2.5')
     compile('org.slf4j:slf4j-api:1.7.21')
+    compile('org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16')
     compile('ch.qos.logback:logback-classic:1.1.7')
     compile files("lib/ojdbc14.jar")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.9'
+    gradleVersion = '2.12'
 }
