--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.tomcat.basedir = C:/webapps/springbootjdbc
 
 spring.thymeleaf.cache = false
 
-spring.datasource.url=jdbc:oracle:thin:@133.227.185.177:1521:DBFL
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@133.227.185.177:1521:DBFL
 spring.datasource.username=kengen3
 spring.datasource.password=kengen3
-spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
